schema/testdata/errors/operations_unique_globally_multiple_models.keel
model Profile {
    fields {
        status Text
    }

    actions {
        //expect-error:16:28:NamingError:There already exists an action with the name 'updateStatus'
        update updateStatus(id) with (status)
    }
}

model Order {
    fields {
        status Text
    }

    actions {
        //expect-error:16:28:NamingError:There already exists an action with the name 'updateStatus'
        update updateStatus(id) with (status)
    }
}
